enable metrics, adding telegraf, adding kapacitor

--- a/docker/metrics/grafana/influx/telegraf/config/telegraf.conf
+++ b/docker/metrics/grafana/influx/telegraf/config/telegraf.conf
@@ -14,10 +14,10 @@
   omit_hostname = false
 
 [[outputs.influxdb]]
-  urls = ["http://influxdb:8086"]
+  urls = ["http://192.168.10.40:8086"]
   database = "telegraf"
-  username = ""
-  password = ""
+  username = "root"
+  password = "root"
   retention_policy = ""
   write_consistency = "any"
   timeout = "5s"
@@ -32,7 +32,7 @@
 [[inputs.cpu]]
 [[inputs.system]]
 [[inputs.influxdb]]
-  urls = ["http://influxdb:8086/debug/vars"]
+  urls = ["http://192.168.10.40:8086/debug/vars"]
 [[inputs.syslog]]
 #   ## Specify an ip or hostname with port - eg., tcp://localhost:6514, tcp://10.0.0.1:6514
 #   ## Protocol, address and port to host the syslog receiver.
