--- a/docker/metrics/blockscout/docker-compose-no-build-ganache.yml
+++ b/docker/metrics/blockscout/docker-compose-no-build-ganache.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: '3.9'
 
 services:
   redis_db:
@@ -6,47 +6,31 @@ services:
       file: ./services/docker-compose-redis.yml
       service: redis_db
 
-  postgres_db:
+  postgres-db-init:
     extends:
       file: ./services/docker-compose-db.yml
-      service: postgres_db
+      service: postgres-db-init
 
-  blockscout:
-    depends_on:
-      - postgres_db
-      - smart-contract-verifier
-      - redis_db
-    image: blockscout/blockscout:${DOCKER_TAG:-latest}
-    pull_policy: always
-    restart: always
-    stop_grace_period: 5m
-    container_name: 'blockscout'
-    links:
-      - postgres_db:database
-    command: sh -c "bin/blockscout eval \"Elixir.Explorer.ReleaseTasks.create_and_migrate()\" && bin/blockscout start"
-    extra_hosts:
-      - 'host.docker.internal:host-gateway'
-    env_file:
-      -  ./envs/common-blockscout.env
-    environment:
-        ETHEREUM_JSONRPC_VARIANT: 'ganache'
-        ETHEREUM_JSONRPC_HTTP_URL: http://host.docker.internal:8333/
-        ETHEREUM_JSONRPC_WS_URL: ws://host.docker.internal:8333/
-        INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER: 'true'
-        INDEXER_DISABLE_PENDING_TRANSACTIONS_FETCHER: 'true'
-        DATABASE_URL: postgresql://postgres:@host.docker.internal:7432/blockscout?ssl=false
-        ECTO_USE_SSL: 'false'
-        SECRET_KEY_BASE: '56NtB48ear7+wMSf0IQuWDAAazhpb31qyc7GiyspBP2vh7t5zlCsF5QDv76chXeN'
-        CHAIN_ID: '1337'
-    ports:
-      - 4000:4000
-    volumes:
-      - ../data/blockscout/logs/:/app/logs/
-
-  smart-contract-verifier:
+  postgres-db:
     extends:
-      file: ./services/docker-compose-smart-contract-verifier.yml
-      service: smart-contract-verifier
+      file: ./services/docker-compose-db.yml
+      service: postgres-db
+
+  backend:
+    depends_on:
+      - postgres-db
+      - redis_db
+    extends:
+      file: ./services/docker-compose-backend.yml
+      service: backend
+    links:
+      - postgres-db:database
+    environment:
+      ETHEREUM_JSONRPC_VARIANT: 'ganache'
+      ETHEREUM_JSONRPC_WS_URL: ws://dockerhost:8333/
+      INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER: 'true'
+      INDEXER_DISABLE_PENDING_TRANSACTIONS_FETCHER: 'true'
+      CHAIN_ID: '1337'
 
   visualizer:
     extends:
@@ -57,3 +41,38 @@ services:
     extends:
       file: ./services/docker-compose-sig-provider.yml
       service: sig-provider
+
+  frontend:
+    depends_on:
+      - backend
+    extends:
+      file: ./services/docker-compose-frontend.yml
+      service: frontend
+
+  stats-db-init:
+    extends:
+      file: ./services/docker-compose-stats.yml
+      service: stats-db-init
+
+  stats-db:
+    depends_on:
+      - backend
+    extends:
+      file: ./services/docker-compose-stats.yml
+      service: stats-db
+
+  stats:
+    depends_on:
+      - stats-db
+    extends:
+      file: ./services/docker-compose-stats.yml
+      service: stats
+
+  proxy:
+    depends_on:
+      - backend
+      - frontend
+      - stats
+    extends:
+      file: ./services/docker-compose-nginx.yml
+      service: proxy
