--- a/docker/metrics/blockscout/docker-compose-no-build-geth.yml
+++ b/docker/metrics/blockscout/docker-compose-no-build-geth.yml
@@ -1,58 +1,98 @@
-version: '3.8'
+version: '3.9'
 
 services:
   redis_db:
+    extra_hosts: # for  Linux hosts since version 20.10
+      - dockerhost:host-gateway
     extends:
       file: ./services/docker-compose-redis.yml
       service: redis_db
 
-  postgres_db:
+  postgres-db-init:
+    extra_hosts: # for  Linux hosts since version 20.10
+      - dockerhost:host-gateway
     extends:
       file: ./services/docker-compose-db.yml
-      service: postgres_db
+      service: postgres-db-init
 
-  blockscout:
-    depends_on:
-      - postgres_db
-      - smart-contract-verifier
-      - redis_db
-      - postgres_db
-    image: blockscout/blockscout:${DOCKER_TAG:-latest}
-    pull_policy: always
-    restart: always
-    stop_grace_period: 5m
-    container_name: 'blockscout'
-    links:
-      - postgres_db:database
-    command: sh -c "bin/blockscout eval \"Elixir.Explorer.ReleaseTasks.create_and_migrate()\" && bin/blockscout start"
-    extra_hosts:
-      - 'host.docker.internal:host-gateway'
-    env_file:
-      -  ./envs/common-blockscout.env
-    environment:
-        ETHEREUM_JSONRPC_VARIANT: 'geth'
-        ETHEREUM_JSONRPC_HTTP_URL: http://192.168.10.31:8545/
-        ETHEREUM_JSONRPC_TRACE_URL: http://192.168.10.31:8545/
-        DATABASE_URL: postgresql://postgres:@host.docker.internal:7432/blockscout?ssl=false
-        ECTO_USE_SSL: 'false'
-        SECRET_KEY_BASE: '56NtB48ear7+wMSf0IQuWDAAazhpb31qyc7GiyspBP2vh7t5zlCsF5QDv76chXeN'
-        MIX_ENV: 'prod'
-    ports:
-      - 4000:4000
-    volumes:
-      - ../data/blockscout/logs/:/app/logs/
-
-  smart-contract-verifier:
+  postgres-db:
+    extra_hosts: # for  Linux hosts since version 20.10
+      - dockerhost:host-gateway
     extends:
-      file: ./services/docker-compose-smart-contract-verifier.yml
-      service: smart-contract-verifier
+      file: ./services/docker-compose-db.yml
+      service: postgres-db
+
+  backend:
+    extra_hosts: # for  Linux hosts since version 20.10
+      - dockerhost:host-gateway
+    depends_on:
+      - postgres-db
+      - redis_db
+    extends:
+      file: ./services/docker-compose-backend.yml
+      service: backend
+    links:
+      - postgres-db:database
+    environment:
+      ETHEREUM_JSONRPC_VARIANT: 'geth'
 
   visualizer:
+    extra_hosts: # for  Linux hosts since version 20.10
+      - dockerhost:host-gateway
     extends:
       file: ./services/docker-compose-visualizer.yml
       service: visualizer
 
   sig-provider:
+    extra_hosts: # for  Linux hosts since version 20.10
+      - dockerhost:host-gateway
     extends:
       file: ./services/docker-compose-sig-provider.yml
       service: sig-provider
+
+  frontend:
+    extra_hosts: # for  Linux hosts since version 20.10
+      - dockerhost:host-gateway
+    depends_on:
+      - backend
+    extends:
+      file: ./services/docker-compose-frontend.yml
+      service: frontend
+    ports:
+      - 3008:3000
+
+  stats-db-init:
+    extra_hosts: # for  Linux hosts since version 20.10
+      - dockerhost:host-gateway
+    extends:
+      file: ./services/docker-compose-stats.yml
+      service: stats-db-init
+
+  stats-db:
+    extra_hosts: # for  Linux hosts since version 20.10
+      - dockerhost:host-gateway
+    depends_on:
+      - backend
+    extends:
+      file: ./services/docker-compose-stats.yml
+      service: stats-db
+
+  stats:
+    extra_hosts: # for  Linux hosts since version 20.10
+      - dockerhost:host-gateway
+    depends_on:
+      - stats-db
+    extends:
+      file: ./services/docker-compose-stats.yml
+      service: stats
+
+  proxy:
+    extra_hosts: # for  Linux hosts since version 20.10
+      - dockerhost:host-gateway
+    depends_on:
+      - backend
+      - frontend
+      - stats
+    extends:
+      file: ./services/docker-compose-nginx.yml
+      service: proxy
