--- a/docker/metrics/blockscout/services/docker-compose-db.yml
+++ b/docker/metrics/blockscout/services/docker-compose-db.yml
@@ -1,16 +1,37 @@
-version: '3.8'
+version: '3.9'
 
 services:
-  postgres_db:
+  postgres-db-init:
     image: postgres:14
+    container_name: 'postgres-db-init'
+    volumes:
+      - ../../data/blockscout/data/blockscout-db-data:/var/lib/postgresql/data/
+    entrypoint:
+      - sh
+      - -c
+      - |
+        chown -R 2000:2000 /var/lib/postgresql/data
+
+  postgres-db:
+    depends_on:
+      postgres-db-init:
+        condition: service_completed_successfully
+    image: postgres:14
+    user: 2000:2000
     restart: always
-    container_name: 'postgres'
+    container_name: 'postgres-db'
     command: postgres -c 'max_connections=200'
     environment:
-        POSTGRES_PASSWORD: ''
-        POSTGRES_USER: 'postgres'
-        POSTGRES_HOST_AUTH_METHOD: 'trust'
+      POSTGRES_DB: 'blockscout'
+      POSTGRES_USER: 'blockscout'
+      POSTGRES_PASSWORD: 'ceWb1MeLBEeOIfk65gU8EjF8'
     ports:
       - 7432:5432
     volumes:
       - ../../data/blockscout/data/blockscout-db-data:/var/lib/postgresql/data/
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U blockscout -d blockscout"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
