--- a/docker/metrics/blockscout/envs/common-frontend.env
+++ b/docker/metrics/blockscout/envs/common-frontend.env
@@ -1,5 +1,6 @@
 NEXT_PUBLIC_API_HOST=localhost
 NEXT_PUBLIC_API_PROTOCOL=http
+NEXT_PUBLIC_API_PORT:4000
 NEXT_PUBLIC_STATS_API_HOST=http://localhost:8080
 NEXT_PUBLIC_NETWORK_NAME=Awesome chain
 NEXT_PUBLIC_NETWORK_SHORT_NAME=Awesome chain
