--- a/docker/metrics/blockscout/envs/common-frontend.env
+++ b/docker/metrics/blockscout/envs/common-frontend.env
@@ -4,7 +4,7 @@ NEXT_PUBLIC_API_PORT:4000
 NEXT_PUBLIC_STATS_API_HOST=http://localhost:8080
 NEXT_PUBLIC_NETWORK_NAME=Awesome chain
 NEXT_PUBLIC_NETWORK_SHORT_NAME=Awesome chain
-NEXT_PUBLIC_NETWORK_ID=5
+NEXT_PUBLIC_NETWORK_ID=3007
 NEXT_PUBLIC_NETWORK_CURRENCY_NAME=Ether
 NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL=ETH
 NEXT_PUBLIC_NETWORK_CURRENCY_DECIMALS=18
@@ -13,6 +13,10 @@ NEXT_PUBLIC_APP_HOST=localhost
 NEXT_PUBLIC_APP_PROTOCOL=http
 NEXT_PUBLIC_HOMEPAGE_CHARTS=['daily_txs']
 NEXT_PUBLIC_VISUALIZE_API_HOST=http://localhost:8081
+NEXT_PUBLIC_NETWORK_RPC_URL=https://localhost:8545
 NEXT_PUBLIC_IS_TESTNET=true
 NEXT_PUBLIC_API_WEBSOCKET_PROTOCOL=ws
 NEXT_PUBLIC_API_SPEC_URL: https://raw.githubusercontent.com/blockscout/blockscout-api-v2-swagger/main/swagger.yaml
+NEXT_PUBLIC_IS_L2_NETWORK=true
+NEXT_PUBLIC_L1_BASE_URL=http://127.0.0.1:8333/
+NEXT_PUBLIC_L2_WITHDRAWAL_URL=https://127.0.0.1:8545/bridge/withdraw
