--- a/docker/metrics/blockscout/services/docker-compose-backend.yml
+++ b/docker/metrics/blockscout/services/docker-compose-backend.yml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services:
   backend:
-    image: blockscout/blockscout:${DOCKER_TAG:-latest}
+    image: blockscout/blockscout-optimism:latest
     pull_policy: always
     restart: always
     stop_grace_period: 5m
