--- a/docker/metrics/blockscout/services/backend.yml
+++ b/docker/metrics/blockscout/services/backend.yml
@@ -2,14 +2,14 @@ version: '3.9'
 
 services:
   backend:
-    image: blockscout/blockscout-optimism:latest
+    image: blockscout/blockscout-optimism:6.3.0
     pull_policy: always
     restart: always
     stop_grace_period: 5m
     container_name: 'backend'
     command: sh -c "bin/blockscout eval \"Elixir.Explorer.ReleaseTasks.create_and_migrate()\" && bin/blockscout start"
     extra_hosts:
-      - 'dockerhost:host-gateway'
+      - 'host.docker.internal:host-gateway'
     env_file:
       -  ../envs/common-blockscout.env
     volumes:
