--- a/docker/metrics/blockscout/services/nginx.yml
+++ b/docker/metrics/blockscout/services/nginx.yml
@@ -5,7 +5,7 @@ services:
     image: nginx
     container_name: proxy
     extra_hosts:
-      - 'dockerhost:host-gateway'
+      - 'host.docker.internal:host-gateway'
     volumes:
       - "../proxy:/etc/nginx/templates"
     environment:
