--- a/docker/node-01-main/docker-compose.yml
+++ b/docker/node-01-main/docker-compose.yml
@@ -11,8 +11,9 @@ services:
     volumes:
       - ./datadir:/datadir
       - ./credentials:/credentials
-    links:
-      - influxdb
+    depends_on:
+      influxdb:
+        condition: service_started
     command:
       - geth
       - --datadir=/datadir
@@ -37,13 +38,14 @@ services:
       - --authrpc.port=8551
       - --authrpc.jwtsecret=/credentials/jwt.txt
       - --rollup.disabletxpoolgossip=true
-      - --metrics
-      - --metrics.expensive
-      - --metrics.influxdb
-      - --metrics.influxdb.endpoint=http://192.168.10.15:8086
-      - --metrics.influxdb.username=geth
-      - --metrics.influxdb.password=geth
-      - --metrics.influxdb.database=geth
+    #      - --metrics
+    #      - --metrics.expensive
+    #      - --metrics.influxdb
+    #      - --metrics.influxdb.endpoint=http://192.168.10.15:8086
+    #      - --metrics.influxdb.username=geth
+    #      - --metrics.influxdb.password=geth
+    #      - --metrics.influxdb.database=geth
+    #      - --miner.gaslimit=100000000
     networks:
       op-local:
         ipv4_address: 192.168.10.11
@@ -54,11 +56,10 @@ services:
       - "8547:8547" # Rollup RPC, to execute special commands of the node
     extra_hosts: # for  Linux hosts since version 20.10
       - dockerhost:host-gateway
-    image: $CW_OP_IMAGE_OP_NODE
-    links:
-      - node1-op-geth
+    image: $CW_OP_IMAGE_OP_STACK
     depends_on:
-      - node1-op-geth
+      node1-op-geth:
+        condition: service_started
     volumes:
       - ./credentials:/credentials
       - ./p2p:/p2p
@@ -93,13 +94,12 @@ services:
       - "8548:8548" # Batcher RPC, to safe stop and maybe some other commands
     extra_hosts: # for  Linux hosts since version 20.10
       - dockerhost:host-gateway
-    image: $CW_OP_IMAGE_OP_BATCHER
-    links:
-      - node1-op-geth
-      - node1-op-node
+    image: $CW_OP_IMAGE_OP_STACK
     depends_on:
-      - node1-op-geth
-      - node1-op-node
+      node1-op-geth:
+        condition: service_started
+      node1-op-node:
+        condition: service_started
     command:
       - op-batcher
       - --l2-eth-rpc=http://192.168.10.11:8545
@@ -126,11 +126,10 @@ services:
       - "8560:8560" # Proposer RPC, just for possible future usage
     extra_hosts: # for  Linux hosts since version 20.10
       - dockerhost:host-gateway
-    image: $CW_OP_IMAGE_OP_PROPOSER
-    links:
-      - node1-op-node
+    image: $CW_OP_IMAGE_OP_STACK
     depends_on:
-      - node1-op-node
+      node1-op-node:
+        condition: service_started
     command:
       - op-proposer
       - --poll-interval=12s
@@ -160,6 +159,9 @@ services:
     networks:
       op-local:
         ipv4_address: 192.168.10.16
+    depends_on:
+      influxdb:
+        condition: service_started
 
   kapacitor:
     extends:
@@ -168,6 +170,9 @@ services:
     networks:
       op-local:
         ipv4_address: 192.168.10.17
+    depends_on:
+      influxdb:
+        condition: service_started
 
   chronograf:
     extends:
@@ -176,6 +181,14 @@ services:
     networks:
       op-local:
         ipv4_address: 192.168.10.18
+
+    depends_on:
+      influxdb:
+        condition: service_started
+      kapacitor:
+        condition: service_started
+      telegraf:
+        condition: service_started
   #influx end
 
 networks:
