Move docker image versions to variables

--- a/docker/metrics/blockscout/services/nginx.yml
+++ b/docker/metrics/blockscout/services/nginx.yml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services:
   proxy:
-    image: nginx
+    image: $CW_BLOCKSCOUT_IMAGE_NGINX
     container_name: proxy
     extra_hosts:
       - 'host.docker.internal:host-gateway'
