--- a/docker/metrics/blockscout/services/backend.yml
+++ b/docker/metrics/blockscout/services/backend.yml
@@ -2,9 +2,9 @@ version: '3.9'
 
 services:
   backend:
-    image: blockscout/blockscout-optimism:6.3.0
+    image: $CW_BLOCKSCOUT_IMAGE_BACKEND
     pull_policy: always
-    restart: always
+    restart: on-failure:5
     stop_grace_period: 5m
     container_name: 'backend'
     command: sh -c "bin/blockscout eval \"Elixir.Explorer.ReleaseTasks.create_and_migrate()\" && bin/blockscout start"
