--- a/docker/metrics/blockscout/services/db.yml
+++ b/docker/metrics/blockscout/services/db.yml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services:
   db-init:
-    image: postgres:15
+    image: $CW_BLOCKSCOUT_IMAGE_POSTGRES
     volumes:
       - ../../data/blockscout/blockscout-db-data:/var/lib/postgresql/data
     entrypoint:
@@ -12,10 +12,10 @@ services:
         chown -R 2000:2000 /var/lib/postgresql/data
 
   db:
-    image: postgres:15
+    image: $CW_BLOCKSCOUT_IMAGE_POSTGRES
     user: 2000:2000
     shm_size: 256m
-    restart: always
+    restart: on-failure:5
     container_name: 'db'
     command: postgres -c 'max_connections=200' -c 'client_connection_check_interval=60000'
     environment:
