--- a/docker/metrics/blockscout/services/frontend.yml
+++ b/docker/metrics/blockscout/services/frontend.yml
@@ -2,10 +2,10 @@ version: '3.9'
 
 services:
   frontend:
-    image: ghcr.io/blockscout/frontend:${FRONTEND_DOCKER_TAG:-latest}
+    image: $CW_BLOCKSCOUT_IMAGE_FRONTEND
     pull_policy: always
     platform: linux/amd64
-    restart: always
+    restart: on-failure:5
     container_name: 'frontend'
     env_file:
       -  ../envs/common-frontend.env
