--- a/docker/metrics/blockscout/services/stats.yml
+++ b/docker/metrics/blockscout/services/stats.yml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services:
   stats-db-init:
-    image: postgres:15
+    image: $CW_BLOCKSCOUT_IMAGE_POSTGRES
     volumes:
       - ../../data/blockscout/stats-db-data:/var/lib/postgresql/data
     entrypoint:
@@ -12,10 +12,10 @@ services:
         chown -R 2000:2000 /var/lib/postgresql/data
 
   stats-db:
-    image: postgres:15
+    image: $CW_BLOCKSCOUT_IMAGE_POSTGRES
     user: 2000:2000
     shm_size: 256m
-    restart: always
+    restart: on-failure:5
     container_name: 'stats-db'
     command: postgres -c 'max_connections=200'
     environment:
@@ -35,10 +35,10 @@ services:
       start_period: 10s
 
   stats:
-    image: ghcr.io/blockscout/stats:${STATS_DOCKER_TAG:-latest}
+    image: $CW_BLOCKSCOUT_IMAGE_STATS
     pull_policy: always
     platform: linux/amd64
-    restart: always
+    restart: on-failure:5
     container_name: 'stats'
     extra_hosts:
       - 'host.docker.internal:host-gateway'
