Move docker image versions to variables

--- a/docker/metrics/grafana/influx/docker-compose-influx.yml
+++ b/docker/metrics/grafana/influx/docker-compose-influx.yml
@@ -3,9 +3,9 @@ services:
   #influx begin
   influxdb:
     # Full tag list: https://hub.docker.com/r/library/influxdb/tags/
-    image: influxdb:1.8.10
+    image: $CW_GRAFANA_IMAGE_INFLUXDB
     container_name: influxdb
-    restart: unless-stopped
+    restart: on-failure:5
     extra_hosts: # for  Linux hosts since version 20.10
       - dockerhost:host-gateway
     volumes:
@@ -18,10 +18,10 @@ services:
       - "8083:8083"
 
   telegraf:
-    image: telegraf:alpine
+    image: $CW_GRAFANA_IMAGE_TELEGRAF
     user: telegraf:$CW_OP_TELEGRAF_DOCKER_ID
     container_name: telegraf
-    restart: unless-stopped
+    restart: on-failure:5
     extra_hosts: # for  Linux hosts since version 20.10
       - dockerhost:host-gateway
     environment:
@@ -35,9 +35,9 @@ services:
 
   kapacitor:
     # Full tag list: https://hub.docker.com/r/library/kapacitor/tags/
-    image: kapacitor:alpine
+    image: $CW_GRAFANA_IMAGE_KAPACITOR
     container_name: kapacitor
-    restart: unless-stopped
+    restart: on-failure:5
     extra_hosts: # for  Linux hosts since version 20.10
       - dockerhost:host-gateway
     volumes:
@@ -50,9 +50,9 @@ services:
       - "9092:9092"
 
   chronograf:
-    image: chronograf:1.8.10-alpine
+    image: $CW_GRAFANA_IMAGE_CHRONOGRAF
     container_name: chronograf
-    restart: unless-stopped
+    restart: on-failure:5
     extra_hosts: # for  Linux hosts since version 20.10
       - dockerhost:host-gateway
     environment:
