--- a/docker/metrics/grafana/grafana/docker-compose-grafana.yml
+++ b/docker/metrics/grafana/grafana/docker-compose-grafana.yml
@@ -1,8 +1,8 @@
 services:
   grafana:
-    image: grafana/grafana:10.1.2
+    image: $CW_GRAFANA_IMAGE_GRAFANA
     container_name: grafana
-    restart: unless-stopped
+    restart: on-failure:5
     user: "0:0"
     ports:
       - "3003:3003"
