--- a/docker/metrics/blockscout/envs/common-blockscout.env
+++ b/docker/metrics/blockscout/envs/common-blockscout.env
@@ -3,13 +3,13 @@ ETHEREUM_JSONRPC_HTTP_URL=http://192.168.10.31:8545/
 # ETHEREUM_JSONRPC_FALLBACK_HTTP_URL=
 DATABASE_URL=postgresql://blockscout:ceWb1MeLBEeOIfk65gU8EjF8@db:5432/blockscout
 # DATABASE_QUEUE_TARGET
-ETHEREUM_JSONRPC_TRACE_URL=http://host.docker.internal:8545/
+ETHEREUM_JSONRPC_TRACE_URL=http://192.168.10.31:8545/
 # ETHEREUM_JSONRPC_FALLBACK_TRACE_URL=
 # ETHEREUM_JSONRPC_FALLBACK_ETH_CALL_URL=
 # ETHEREUM_JSONRPC_ETH_CALL_URL=
 # ETHEREUM_JSONRPC_HTTP_TIMEOUT=
 # CHAIN_TYPE=
-NETWORK=
+NETWORK=${CHAIN_ID}
 SUBNETWORK=Awesome chain
 LOGO=/images/blockscout_logo.svg
 # ETHEREUM_JSONRPC_WS_URL=
@@ -269,7 +269,7 @@ EXTERNAL_APPS=[]
 # RESTRICTED_LIST_KEY=
 SHOW_MAINTENANCE_ALERT=false
 MAINTENANCE_ALERT_MESSAGE=
-CHAIN_ID=
+CHAIN_ID=${CHAIN_ID}
 MAX_SIZE_UNLESS_HIDE_ARRAY=50
 HIDE_BLOCK_MINER=false
 DISPLAY_TOKEN_ICONS=false
