--- a/docker/metrics/blockscout/envs/common-frontend.env
+++ b/docker/metrics/blockscout/envs/common-frontend.env
@@ -1,19 +1,24 @@
-NEXT_PUBLIC_API_HOST=localhost
-NEXT_PUBLIC_API_PROTOCOL=http
-NEXT_PUBLIC_API_PORT:4000
-NEXT_PUBLIC_STATS_API_HOST=http://localhost:8080
-NEXT_PUBLIC_NETWORK_NAME=Awesome chain
-NEXT_PUBLIC_NETWORK_SHORT_NAME=Awesome chain
-NEXT_PUBLIC_NETWORK_ID=3007
-NEXT_PUBLIC_NETWORK_CURRENCY_NAME=Ether
-NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL=ETH
-NEXT_PUBLIC_NETWORK_CURRENCY_DECIMALS=18
-NEXT_PUBLIC_API_BASE_PATH=/
-NEXT_PUBLIC_APP_HOST=localhost
-NEXT_PUBLIC_APP_PROTOCOL=http
-NEXT_PUBLIC_HOMEPAGE_CHARTS=['daily_txs']
-NEXT_PUBLIC_VISUALIZE_API_HOST=http://localhost:8082
-NEXT_PUBLIC_NETWORK_RPC_URL=https://localhost:8545
-NEXT_PUBLIC_IS_TESTNET=true
-NEXT_PUBLIC_API_WEBSOCKET_PROTOCOL=ws
+NEXT_PUBLIC_API_HOST=${NEXT_PUBLIC_API_HOST}
+NEXT_PUBLIC_API_PROTOCOL=${NEXT_PUBLIC_API_PROTOCOL}
+NEXT_PUBLIC_API_PORT=${NEXT_PUBLIC_API_PORT}
+NEXT_PUBLIC_STATS_API_HOST=${NEXT_PUBLIC_STATS_API_HOST}
+NEXT_PUBLIC_NETWORK_NAME=${NEXT_PUBLIC_NETWORK_NAME}
+NEXT_PUBLIC_NETWORK_SHORT_NAME=${NEXT_PUBLIC_NETWORK_SHORT_NAME}
+NEXT_PUBLIC_NETWORK_ID=${NEXT_PUBLIC_NETWORK_ID}
+NEXT_PUBLIC_NETWORK_CURRENCY_NAME=${NEXT_PUBLIC_NETWORK_CURRENCY_NAME}
+NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL=${NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL}
+NEXT_PUBLIC_NETWORK_CURRENCY_DECIMALS=${NEXT_PUBLIC_NETWORK_CURRENCY_DECIMALS}
+NEXT_PUBLIC_API_BASE_PATH=${NEXT_PUBLIC_API_BASE_PATH}
+NEXT_PUBLIC_APP_HOST=${NEXT_PUBLIC_APP_HOST}
+NEXT_PUBLIC_APP_PROTOCOL=${NEXT_PUBLIC_APP_PROTOCOL}
+NEXT_PUBLIC_HOMEPAGE_CHARTS=${NEXT_PUBLIC_HOMEPAGE_CHARTS}
+NEXT_PUBLIC_VISUALIZE_API_HOST=${NEXT_PUBLIC_VISUALIZE_API_HOST}
+NEXT_PUBLIC_NETWORK_RPC_URL=${NEXT_PUBLIC_NETWORK_RPC_URL}
+NEXT_PUBLIC_IS_TESTNET=${NEXT_PUBLIC_IS_TESTNET}
+NEXT_PUBLIC_API_WEBSOCKET_PROTOCOL=${NEXT_PUBLIC_API_WEBSOCKET_PROTOCOL}
 NEXT_PUBLIC_API_SPEC_URL=https://raw.githubusercontent.com/blockscout/blockscout-api-v2-swagger/main/swagger.yaml
+NEXT_PUBLIC_ROLLUP_TYPE=${NEXT_PUBLIC_ROLLUP_TYPE}
+NEXT_PUBLIC_ROLLUP_L1_BASE_URL=${NEXT_PUBLIC_ROLLUP_L1_BASE_URL}
+NEXT_PUBLIC_DATA_AVAILABILITY_ENABLED=${NEXT_PUBLIC_DATA_AVAILABILITY_ENABLED}
+NEXT_PUBLIC_ROLLUP_L2_WITHDRAWAL_URL=${NEXT_PUBLIC_ROLLUP_L2_WITHDRAWAL_URL}
+NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=${NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID}
