--- a/docker/metrics/blockscout/services/visualizer.yml
+++ b/docker/metrics/blockscout/services/visualizer.yml
@@ -2,10 +2,10 @@ version: '3.9'
 
 services:
   visualizer:
-    image: ghcr.io/blockscout/visualizer:latest
+    image: ${CW_BLOCKSCOUT_IMAGE_VISUALIZER}
     pull_policy: always
     platform: linux/amd64
-    restart: on-failure:5
+    restart: on-failure
     container_name: 'visualizer'
     env_file:
       -  ../envs/common-visualizer.env
