--- a/docker/node-03/docker-compose.yml
+++ b/docker/node-03/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - "8576:8546" # WebSocket
     extra_hosts: # for  Linux hosts since version 20.10
       - dockerhost:host-gateway
-    image: $CW_OP_IMAGE_OP_GETH
+    image: ${CW_OP_IMAGE_OP_GETH}
     volumes:
       - ./datadir:/datadir
       - ./credentials:/credentials
@@ -50,7 +50,7 @@ services:
       - "8577:8547" # Rollup RPC, to execute special commands of the node
     extra_hosts: # for  Linux hosts since version 20.10
       - dockerhost:host-gateway
-    image: $CW_OP_IMAGE_OP_STACK
+    image: ${CW_OP_IMAGE_OP_STACK}
     depends_on:
       node3-op-geth:
         condition: service_started
@@ -77,153 +77,8 @@ services:
     networks:
       op-local:
         ipv4_address: 192.168.10.32
-
-  #Blockscout begin
-  redis-db:
-    extends:
-      file: ../metrics/blockscout/geth.yml
-      service: redis-db
-    networks:
-      op-local:
-        ipv4_address: 192.168.10.33
-
-  db-init:
-    extends:
-      file: ../metrics/blockscout/geth.yml
-      service: db-init
-
-  db:
-    extends:
-      file: ../metrics/blockscout/geth.yml
-      service: db
-    networks:
-      op-local:
-        ipv4_address: 192.168.10.34
-        aliases:
-          - database
-    depends_on:
-      db-init:
-        condition: service_started
-
-  backend:
-    extends:
-      file: ../metrics/blockscout/geth.yml
-      service: backend
-    ports:
-      - 4001:4000
-    networks:
-      op-local:
-        ipv4_address: 192.168.10.35
-    depends_on:
-      db:
-        condition: service_started
-      redis-db:
-        condition: service_started
-
-  frontend:
-    extends:
-      file: ../metrics/blockscout/geth.yml
-      service: frontend
-    ports:
-      - 3008:3000
-    networks:
-      op-local:
-        ipv4_address: 192.168.10.36
-    depends_on:
-      - backend
-
-  visualizer:
-    extends:
-      file: ../metrics/blockscout/geth.yml
-      service: visualizer
-    networks:
-      op-local:
-        ipv4_address: 192.168.10.38
-
-  sig-provider:
-    extends:
-      file: ../metrics/blockscout/geth.yml
-      service: sig-provider
-    networks:
-      op-local:
-        ipv4_address: 192.168.10.39
-
-  stats-db-init:
-    extends:
-      file: ../metrics/blockscout/geth.yml
-      service: stats-db-init
-
-  stats-db:
-    depends_on:
-      stats-db-init:
-        condition: service_started
-    extends:
-      file: ../metrics/blockscout/geth.yml
-      service: stats-db
-    networks:
-      op-local:
-        ipv4_address: 192.168.10.41
-
-  stats:
-    depends_on:
-      - stats-db
-      - backend
-    extends:
-      file: ../metrics/blockscout/geth.yml
-      service: stats
-    networks:
-      op-local:
-        ipv4_address: 192.168.10.42
-
-  proxy:
-    depends_on:
-      - backend
-      - frontend
-      - stats
-    extends:
-      file: ../metrics/blockscout/geth.yml
-      service: proxy
-    ports:
-      - 80:80
-      - 4000:80
-      - 8080:8080
-      - 8085:8085
-    networks:
-      op-local:
-        ipv4_address: 192.168.10.43
-  #  blockscout end
-
-  #grafana begin
-  grafana:
-    extends:
-      file: ../metrics/grafana/grafana/docker-compose-grafana.yml
-      service: grafana
-    networks:
-      op-local:
-        ipv4_address: 192.168.10.44
-  #grafana end
-
-  #prometheus begin
-  prometheus:
-    extends:
-      file: ../metrics/grafana/prometheus/docker-compose-prometheus.yml
-      service: prometheus
-    networks:
-      op-local:
-        ipv4_address: 192.168.10.45
-#prometheus end
-
 networks:
   op-local:
     name: op-local
     external: true
     driver: bridge
-#    driver_opts:
-#      com.docker.network.driver.mtu: 5000
-volumes:
-  grafana-data:
-    driver: local
-    driver_opts:
-      type: 'none'
-      o: 'bind'
-      device: '../metrics/data/grafana/data'
