--- a/docker/node-02/docker-compose.yml
+++ b/docker/node-02/docker-compose.yml
@@ -69,6 +69,7 @@ services:
       - --p2p.discovery.path=/p2p/opnode_discovery_db
       - --l1=$CW_OP_L1_RPC_URL
       - --l1.rpckind=$CW_OP_L1_RPC_KIND
+      - --l1.beacon=$CW_OP_L1_BEACON_URL
     networks:
       op-local:
         ipv4_address: 192.168.10.22
