--- a/docker/explorer/blockscout/envs/common-frontend.env
+++ b/docker/explorer/blockscout/envs/common-frontend.env
@@ -11,6 +11,7 @@ NEXT_PUBLIC_NETWORK_CURRENCY_DECIMALS=${NEXT_PUBLIC_NETWORK_CURRENCY_DECIMALS}
 NEXT_PUBLIC_API_BASE_PATH=${NEXT_PUBLIC_API_BASE_PATH}
 NEXT_PUBLIC_APP_HOST=${NEXT_PUBLIC_APP_HOST}
 NEXT_PUBLIC_APP_PROTOCOL=${NEXT_PUBLIC_APP_PROTOCOL}
+NEXT_PUBLIC_APP_PORT=${NEXT_PUBLIC_APP_PORT}
 NEXT_PUBLIC_HOMEPAGE_CHARTS=${NEXT_PUBLIC_HOMEPAGE_CHARTS}
 NEXT_PUBLIC_VISUALIZE_API_HOST=${NEXT_PUBLIC_VISUALIZE_API_HOST}
 NEXT_PUBLIC_NETWORK_RPC_URL=${NEXT_PUBLIC_NETWORK_RPC_URL}
